fix: fix z-index issue that does not allows use filters

--- a/src/app/components/Header/header.scss
+++ b/src/app/components/Header/header.scss
@@ -3,6 +3,7 @@
   top: 0;
   background: white;
   box-shadow: 2px 2px 15px #af2dbb;
+  z-index: 1;
 }
 
 .logo{
