--- a/src/app/components/ProductsPage/ProductsPage.scss
+++ b/src/app/components/ProductsPage/ProductsPage.scss
@@ -102,7 +102,3 @@
 .fix-width{
   flex-grow: 0;
 }
-
-.controls-container{
-  z-index: -1;
-}
